show MNIST image properties

--- a/cnn_mnist_classification_pytorch.ipynb
+++ b/cnn_mnist_classification_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPshwNlUIGMRq/Q9d3X5Enc",
+      "authorship_tag": "ABX9TyOraPx+FjhKvIVHKlz29+0m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,24 +72,29 @@
         "\n",
         "# Download and load the MNIST training set\n",
         "\n",
-        "# train_dataset is a Tensor\n",
+        "# define the batch size\n",
+        "bs = 64\n",
+        "\n",
+        "# train_dataset is an object of the dataset class\n",
         "train_dataset = torchvision.datasets.MNIST(root='./', train=True, download=True, transform=transform)\n",
         "# train_loader is a DataLoader\n",
-        "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+        "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=bs, shuffle=True)\n",
         "\n",
         "# Download and load the MNIST test set\n",
         "test_dataset = torchvision.datasets.MNIST(root='./', train=False, download=True, transform=transform)\n",
-        "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=64, shuffle=False)"
+        "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=bs, shuffle=False)"
       ],
       "metadata": {
         "id": "pIJcyf-_DS9e"
       },
-      "execution_count": 8,
+      "execution_count": 54,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Retrieve MNIST dataset properties"
+      ],
       "metadata": {
         "id": "U6vBd88PFT73"
       }
@@ -97,38 +102,35 @@
     {
       "cell_type": "code",
       "source": [
-        "print(len(train_loader))\n",
+        "print('Total number of MNIST images:', len(train_dataset))\n",
         "\n",
-        "print('Total no of Images: ',train_loader.shape[0])\n",
-        "print('Size of Image:', X_train.shape[1:])\n",
-        "print('Total no of labels:', y_train.shape)"
+        "# dataset class is subscriptable => train_dataset[0] is the first image of MNIST\n",
+        "# train_dataset[0] returns a tuble of the image (torch.Tensor) and its label (int)\n",
+        "image, label = train_dataset[0]\n",
+        "print('Image dimensions:', image.size(), 'Image label:', label)\n",
+        "print('Image channels:', image.size()[0])\n",
+        "print('Image size (height x width):', image.size()[1:])\n",
+        "\n",
+        "print('Total number of batches:', len(train_dataset), '/', bs, '=', len(train_loader))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 262
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Nzb4AvX7FVKO",
-        "outputId": "713535d4-2f52-4b1e-faf1-541c88b06bd3"
+        "outputId": "8b891768-ba61-4af1-ae56-a70278be15e6"
       },
-      "execution_count": 13,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "938\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'DataLoader' object has no attribute 'shape'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-e3c03430f225>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Total no of Images: '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Size of Image:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Total no of labels:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'DataLoader' object has no attribute 'shape'"
+            "Total number of MNIST images: 60000\n",
+            "Image dimensions: torch.Size([1, 28, 28]) Image label: 5\n",
+            "Image channels: 1\n",
+            "Image size (height x width): torch.Size([28, 28])\n",
+            "Total number of batches: 60000 / 64 = 938\n"
           ]
         }
       ]
