--- a/numpy_lstm_text_prediction.ipynb
+++ b/numpy_lstm_text_prediction.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1L3Im5CGOtWjRdH4kMnlG",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyO8f7xT0MCCPdHAZ1yDz97J"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Siarzis/ai-tutor/blob/main/numpy_lstm_text_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "Import libraries"
       ],
@@ -37,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "v0r7AtR4rvZY"
       },
@@ -58,6 +47,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title Default title text\n",
         "np.random.seed(42)\n",
         "\n",
         "def generate_dataset(num_words=100, max_word_size=10):\n",
@@ -85,7 +75,7 @@
         "id": "QtDSH0h7sEYu",
         "outputId": "b979b744-2fdd-4b5d-81ab-464567eb590e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,23 +134,10 @@
         "index_to_word = 1"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_87B5ukiBsXi",
-        "outputId": "6773cf5f-a65c-4b71-ac74-8071badab178"
+        "id": "_87B5ukiBsXi"
       },
-      "execution_count": 67,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'ssssttttEOS': '000100000', 'ssssssstttttttEOS': '000000100', 'ssssssssttttttttEOS': '000000010', 'stEOS': '100000000', 'ssstttEOS': '001000000', 'ssttEOS': '010000000', 'ssssssttttttEOS': '000001000', 'ssssstttttEOS': '000010000', 'ssssssssstttttttttEOS': '000000001'}\n",
-            "{'000100000': 'ssssttttEOS', '000000100': 'ssssssstttttttEOS', '000000010': 'ssssssssttttttttEOS', '100000000': 'stEOS', '001000000': 'ssstttEOS', '010000000': 'ssttEOS', '000001000': 'ssssssttttttEOS', '000010000': 'ssssstttttEOS', '000000001': 'ssssssssstttttttttEOS'}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -168,7 +145,7 @@
       "metadata": {
         "id": "ArXSUFbSXxWS"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     }
   ]
