--- a/numpy_lstm_text_prediction.ipynb
+++ b/numpy_lstm_text_prediction.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPX4J2HAfFP/LkM3qlDNNnn"
+      "authorship_tag": "ABX9TyOfnJrhoCXO8yAQmpM3+lOn",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Siarzis/ai-tutor/blob/main/numpy_lstm_text_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -74,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QtDSH0h7sEYu",
-        "outputId": "349acd6e-c186-4331-8aa6-afe6565b1135"
+        "outputId": "abbaf313-d032-4bb6-c372-ae519571da2a"
       },
       "execution_count": 2,
       "outputs": [
@@ -84,6 +95,60 @@
           "text": [
             "['s', 's', 's', 's', 's', 's', 's', 's', 't', 't', 't', 't', 't', 't', 't', 't', 'EOS']\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Correspond Vocabulary Tokens to Indices"
+      ],
+      "metadata": {
+        "id": "EjugjcoeJR1P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tokens_to_indices(vocabulary):\n",
+        "\n",
+        "    token_to_index = {}\n",
+        "    index_to_token = {}\n",
+        "\n",
+        "    # flatten the given vocabulary to convert it into tokens\n",
+        "    flatten_vocabulary = sum(vocabulary, [])\n",
+        "\n",
+        "    tokens = list(set(flatten_vocabulary))\n",
+        "\n",
+        "    # append the unknown-character token\n",
+        "    tokens.append('UNK')\n",
+        "\n",
+        "    for i, t in enumerate(tokens):\n",
+        "        token_to_index[t] = i\n",
+        "        index_to_token[i] = t\n",
+        "\n",
+        "    return token_to_index, index_to_token\n",
+        "\n",
+        "tokens_to_indices(vocabulary)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xPwFv-2NIz4j",
+        "outputId": "37ced4af-757c-45a6-fa3f-ade62c750e2d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "({'t': 0, 'EOS': 1, 's': 2, 'UNK': 3}, {0: 't', 1: 'EOS', 2: 's', 3: 'UNK'})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     },
@@ -135,23 +200,10 @@
         "index_to_word = 1"
       ],
       "metadata": {
-        "id": "_87B5ukiBsXi",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fb987f02-6c05-4298-d6f1-f03fda03ead6"
+        "id": "_87B5ukiBsXi"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'ssssttttEOS': '000100000', 'ssssssttttttEOS': '000001000', 'ssttEOS': '010000000', 'ssssssssttttttttEOS': '000000010', 'ssssssstttttttEOS': '000000100', 'stEOS': '100000000', 'ssstttEOS': '001000000', 'ssssssssstttttttttEOS': '000000001', 'ssssstttttEOS': '000010000'}\n",
-            "{'000100000': 'ssssttttEOS', '000001000': 'ssssssttttttEOS', '010000000': 'ssttEOS', '000000010': 'ssssssssttttttttEOS', '000000100': 'ssssssstttttttEOS', '100000000': 'stEOS', '001000000': 'ssstttEOS', '000000001': 'ssssssssstttttttttEOS', '000010000': 'ssssstttttEOS'}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -170,7 +222,7 @@
       "metadata": {
         "id": "ArXSUFbSXxWS"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +259,7 @@
         "id": "xS_lHAiFrBkt",
         "outputId": "d21e37a2-9140-4714-ec8d-bc0dc833c61a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,12 +336,13 @@
         "    # softmax maps a given vector to range [0.0, 1.0]. Since we have a one-hot\n",
         "    # encoding representation, we need to find which index of the generated\n",
         "    # output has the largest probability to be predicted\n",
-        "    y_t = softmax(W_y @ h_t)"
+        "    y_t = softmax(W_y @ h_t)\n",
+        "\n"
       ],
       "metadata": {
         "id": "Lyg16gj6CBsL"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
